--- a/Videozas.html
+++ b/Videozas.html
@@ -47,9 +47,9 @@ body
 </div>
 
 <div class="videopic">
-<img src="videozas/bulividi.jpg" alt="bulividi"height="250px" style="float: left;margin: 40 30px;">
-<img src="videozas/filmora.jpg" alt="fimora"height="250px" style="float: center;margin: 40 0px;">
-<img src="videozas/prezi_video.jpg" alt="prezi"height="250px" style="float: right;margin: 40 30px;">
+<img src="bulividi.jpg">
+<img src="filmora.jpg">
+<img src="prezi_video.jpg">
 </div>
 
 
