--- a/Videozas.html
+++ b/Videozas.html
@@ -47,7 +47,7 @@ body
 </div>
 
 <div class="videopic">
-<img src="bulividi.jpg">
+<img src="profkep.jpeg">
 <img src="filmora.jpg">
 <img src="prezi_video.jpg">
 </div>
