--- a/Videozas.html
+++ b/Videozas.html
@@ -47,9 +47,8 @@ body
 </div>
 
 <div class="videopic">
-<img src="profkep.jpeg">
-<img src="filmora.jpg">
-<img src="prezi_video.jpg">
+<img src="bulividi.jpg" alt="buli">
+<img src="prezi_video.jpg" alt="prezentáció">
 </div>
 
 
